@@ -1,3 +1,4 @@
+Micro tab: Made NO3- concentration bar blue because it represents a negative ion
 Micro tab: Fixed exponent for the water/solution volume readout and show no water as 0L
 Micro tab: Combined the "remove solute 1" and "remove solute 2" buttons into one "remove solutes" button
 # 0.00.78 (54820) Aug 3, 2011
